# agentvsagent

./: .ackrc  .gitignore  .gitmodules  .npmignore  CNAME  Gemfile  Guardfile  LICENSE.txt  MILESTONES.md  Makefile  Procfile  README.md  Rakefile  hearts.thrift  index.html  index.js  package.json  params.json  project.clj  run.coffee  server.coffee  server.js
cards-agents-in-a-box/hearts/haskell/: Game.hs  README.md  agentvsagent-sample.cabal
cards-server-in-a-box/: Guardfile  package-lock.json  package.json  project.clj  server.coffee
cards-server-in-a-box/test/: factory.coffee  mocha.opts
config/: adapters.js  bootstrap.js  session.js
hearts/: arena.coffee  hearts.thrift  idGenerator.coffee  logger.coffee  matchMaker.coffee  player.coffee  server.coffee
hearts/game/: actions.coffee  card.coffee  index.coffee  pile.coffee  player.coffee  rank.coffee  round.coffee  seat.coffee  states.coffee  suit.coffee  trick.coffee
lib/: abstractGame.coffee  abstractPlayer.coffee  agent.coffee  arena.coffee  cardPile.coffee  entrance.coffee  matchMaker.coffee  queue.coffee  server.coffee  server.js
planetwars-agents-in-a-box/: .gitignore  Rakefile
planetwars-server-in-a-box/: .dockerignore  .gitignore  Dockerfile  apache-config.conf  docker-compose.yml  docker-entrypoint.sh  kubernetes-manifest.yml  supervisord.conf
service/: abstractHandler.coffee
src/less/: style.less
test/: arenaTest.coffee  factory.coffee  matchMakerTest.coffee  mocha.opts  testHelper.coffee  testHelper.js
thrift/: fireworks.thrift.erb  hearts.thrift  hearts.thrift.erb  tic_tac_toe.thrift.erb
(+246 files in other folders)
