name:                myAgent
version:             0.1.0.0
homepage:            http://agentvsagent.com
license:             MIT
author:              Phillip Campbell
build-type:          Simple
cabal-version:       >=1.8

executable myAgent
  Main-is:        MyAgent.hs
  build-depends:  base ==4.*,
                  hashable ==1.2.*,
                  text ==0.11.*,
                  unordered-containers ==0.2.*,
                  vector ==0.10.*
